# GoWith

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
apps/ai-worker/: Dockerfile  Dockerfile.production  pyproject.toml
apps/ai-worker/app/: __init__.py  main.py  prompts.py  schemas.py
apps/ai-worker/tests/: test_health.py
apps/api/: Dockerfile.production  package.json
apps/web/: Dockerfile.production  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/worker/: Dockerfile.production  package.json
db/migrations/: 001_extensions_and_base.sql  002_ai_and_candidates.sql  003_poi_shops_review.sql  004_recommendation_logs.sql  005_admin_observability.sql  005_shop_external_links_and_poi_business.sql  006_image_source_urls.sql  006_remove_ai_avg_price.sql  007_admin_recycle_bin_and_overrides.sql  007_user_avatar_source_url.sql  008_comment_display_metadata.sql  008_scheduled_task_run_types.sql  009_ai_run_parent_calls.sql  009_repair_completed_scheduled_cleanup_runs.sql  010_admin_task_realtime.sql
docs/: MVP-ai-workflow-and-admin-spec.md  MVP-bilibili-shop-map.md  MVP-database-schema.md  PRD-bilibili-shop-map.md  openapi.yaml  security-public-deployment-report.md
scripts/: backfill-images.ts  backfill-shop-evidence.ts  clear-data.ts  dedupe-shops-by-poi.ts  env-utils.mjs  migrate.ts  run-ai-worker.mjs  run-next.mjs  seed-admin.ts
(+102 files in other folders)
