[project]
name = "gowith-ai-worker"
version = "0.1.0"
description = "GoWith AI and ASR worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "groq>=0.15.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "httpx>=0.28.1",
  "openai>=1.0.0",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
  "mypy>=1.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
